# camel

./: .gitignore  LICENSE  README.md  autonomous_dev.py  camel.json  camel.nuspec  install.ps1  install.sh  progress_monitor.py  pyproject.toml  requirements.txt
camel/: main.py
camel/config/: features.yaml  servers.yaml  theme.yaml
camel/core/: agent_interface.py
config/: servers.yaml  startup.txt
dashboard/: guardian_daemon.py  nginx.conf  server.py  setup.sh
src/: __init__.py  main.py
src/core/: agent_interface.py  tool_registry.py
src/ui/: menus.py
tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
